tests/ui/numbers-arithmetic/overflowing-lsh-3.stderr
error: this arithmetic operation will overflow
  --> $DIR/overflowing-lsh-3.rs:7:14
   |
LL |     let _x = 1_u64 << 64;
   |              ^^^^^^^^^^^ attempt to shift left by `64_i32`, which would overflow
   |
note: the lint level is defined here
  --> $DIR/overflowing-lsh-3.rs:4:9
   |
LL | #![deny(arithmetic_overflow)]
   |         ^^^^^^^^^^^^^^^^^^^

error: this arithmetic operation will overflow
  --> $DIR/overflowing-lsh-3.rs:7:14
   |
LL |     let _x = 1_u64 << 64;
   |              ^^^^^^^^^^^ attempt to shift left by `64_i32`, which would overflow
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

